--- a/styles/BioCard.module.scss
+++ b/styles/BioCard.module.scss
@@ -7,6 +7,7 @@
       flex-direction: column;
       position: relative;
       margin: 1rem;
+      box-shadow: 0 20px 40px -14px rgb(0 0 0 / 25%);
   
       &:hover {
         .header_post {
@@ -18,8 +19,8 @@
         }
          
          img {
-            transform: translatey(-10px) translatex(-5px) scale(1.05)
-  
+            transform: translatey(-10px) translatex(-5px) scale(1.05);
+            object-fit: cover;
          }
       }
   
